fix(toast): fixes alignment on toasts

--- a/src/components/toast/Toast.module.scss
+++ b/src/components/toast/Toast.module.scss
@@ -15,6 +15,7 @@
   font-weight: 500;
   user-select: none;
   flex: 1;
+  line-height: 24px;
 
   &.persistentToast {
     cursor: pointer;
